[47] Change isBlank method